--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<HTML>
+  <HEAD>
+    <TITLE> Projeto Soma </TITLE>
+    <link REL = "stylsheet" type = "rext/CSS" HERF = "style.CSS/>
+      <script type = "text/javascript" SRC = "script.js"></script>
+  </HEAD>
+  <BODY>
+    <h1>10+15=</h1>
+    <INPUT TYPE = "button" ONCLICK = "mostra resultado()" VALUE = "calcular" ID = "botão"/>  
+  </BODY>
+</HTML>
