--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
   <HEAD>
     <TITLE> Projeto Soma </TITLE>
-    <link REL = "stylsheet" type = "rext/CSS" HERF = "style.CSS/>
+    <link REL = "stylesheet" type = "rext/CSS" HERF = "style.CSS/>
       <script type = "text/javascript" SRC = "script.js"></script>
   </HEAD>
   <BODY>
